沿革をテンプレート化し、そちらを使用するように変更

--- a/about/index.html
+++ b/about/index.html
@@ -123,144 +123,11 @@ article_subtitle: 私たちについて
 
         <div class="section-in-future">
           <ul class="timeline">
+            {% for event in site.timeline_events %}
             <li class="timeline-event">
-              <label class="timeline-event-icon"></label>
-              <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">2016/11/19</p>
-                <h3>Takizawa Hackathon ver.1を開催</h3>
-                <h4>コミュニティが立ち上がり、初めてのハッカソンを開催しました。</h4>
-                <div class="time-line-info-list">
-                  <ul>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>テーマ</strong><br> 知る人ぞ知る
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>参加人数</strong><br> 20名程度
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong><a href="https://www.facebook.com/events/202342693527634/">Facebookイベントページ<i
-                              class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
-                      </p>
-                    </li>
-                  </ul>
-                </div>
-              </div>
+              {{ event.content }}
             </li>
-            <li class="timeline-event">
-              <label class="timeline-event-icon"></label>
-              <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">2017/02/27</p>
-                <h3>Takizawa Hackathon ver.2を開催</h3>
-                <h4>第２回目となるハッカソンイベントを開催しました。</h4>
-                <div class="time-line-info-list">
-                  <ul>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>テーマ</strong><br> 尖ったプロダクトで相手のこころを変える
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>参加人数</strong><br> 10名程度
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong><a href="https://www.facebook.com/events/206098249794623/">Facebookイベントページ<i
-                              class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
-                      </p>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-event">
-              <label class="timeline-event-icon"></label>
-              <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">2017/08/05</p>
-                <h3>Takizawa Hackathon ver.3を開催</h3>
-                <h4>開催内容を一新した滝沢ハッカソンを開催しました。ITベンチャー企業であるオズビジョン様からの協賛などにより、大変充実した内容となりました。</h4>
-                <div class="time-line-info-list">
-                  <ul>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>テーマ</strong><br> 滝沢を有名にする
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>参加人数</strong><br> 20名
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong><a href="https://www.facebook.com/events/1906125736343140">Facebookイベントページ<i
-                              class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong><a href="/tracks/ver3.html">Ver.3のホームページ<i class="fa fa-external-link"
-                              aria-hidden="true"></i></a></strong><br>
-                      </p>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-event">
-              <label class="timeline-event-icon"></label>
-              <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">2017/11/11</p>
-                <h3>Takizawa Hackathon ver.4を開催</h3>
-                <h4>第4回目となるハッカソンイベントを開催しました。</h4>
-                <div class="time-line-info-list">
-                  <ul>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>テーマ</strong><br> デート x ○○
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>開催場所</strong><br> 滝沢市IPU第2イノベーションセンター
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong>参加人数</strong><br> 15名
-                      </p>
-                    </li>
-                    <li>
-                      <p class="time-line-event-comment">
-                        <strong><a href="https://takizawahackathon.connpass.com/event/68601/">connpassイベントページ<i
-                              class="fa fa-external-link" aria-hidden="true"></i></a></strong><br>
-                      </p>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </li>
+            {% endfor %}
           </ul>
         </div>
       </div>
