timeline_eventsで使用する一部変数を変更

--- a/_timeline_events/takizawa_hackathon_ver1.html
+++ b/_timeline_events/takizawa_hackathon_ver1.html
@@ -1,6 +1,6 @@
 ---
 date: 2016-11-19
-event_version: 1
+event_title: Takizawa Hackathon ver.1を開催
 event_desctiption: コミュニティが立ち上がり、初めてのハッカソンを開催しました。
 event_theme: 知る人ぞ知る
 event_place: 滝沢市IPU第2イノベーションセンター
