--- a/_timeline_events/takizawa_hackathon_ver2.html
+++ b/_timeline_events/takizawa_hackathon_ver2.html
@@ -1,6 +1,6 @@
 ---
 date: 2017-02-27
-event_version: 2
+event_title: Takizawa Hackathon ver.2を開催
 event_desctiption: 第２回目となるハッカソンイベントを開催しました。
 event_theme: 尖ったプロダクトで相手のこころを変える
 event_place: 滝沢市IPU第2イノベーションセンター
