--- a/_timeline_events/takizawa_hackathon_ver4.html
+++ b/_timeline_events/takizawa_hackathon_ver4.html
@@ -1,6 +1,6 @@
 ---
 date: 2017-11-11
-event_version: 4
+event_title: Takizawa Hackathon ver.4を開催
 event_desctiption: 第4回目となるハッカソンイベントを開催しました。
 event_theme: デート x ○○
 event_place: 滝沢市IPU第2イノベーションセンター
