--- a/_timeline_events/takizawa_hackathon_ver5.html
+++ b/_timeline_events/takizawa_hackathon_ver5.html
@@ -1,6 +1,6 @@
 ---
 date: 2023-12-9
-event_version: 5
+event_title: Takizawa Hackathon ver.5を開催
 event_desctiption: 第5回目となるハッカソンイベントを開催しました。
 event_theme: 滝沢・盛岡の観光を盛り上げる！
 event_place: 岩手県立大学 滝沢キャンパス ソフトウェア情報学部A棟 201
