--- a/_timeline_events/takizawa_hackathon_ver3.html
+++ b/_timeline_events/takizawa_hackathon_ver3.html
@@ -1,6 +1,6 @@
 ---
 date: 2017-08-05
-event_version: 3
+event_title: Takizawa Hackathon ver.3を開催
 event_desctiption: 開催内容を一新した滝沢ハッカソンを開催しました。ITベンチャー企業であるオズビジョン様からの協賛などにより、大変充実した内容となりました。
 event_theme: 滝沢を有名にする
 event_place: 滝沢市IPU第2イノベーションセンター
