add sponsor link

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
         </nav>
         <a id="entry-btn-top" href="https://forms.gle/DBXGTzr1yonN2Qce9"
           class="btn btn-default btn-shadow wf-notosansjapanese" target="_blank">参加申し込みをする</a>
+        <div class="sponsor-link">
+          <a href="/sponsorevents/">スポンサーイベント一覧</a>
+        </div>
       </div>
     </div>
     <!-- .Jumbotron-->
