add sponsor logo

--- a/index.html
+++ b/index.html
@@ -297,6 +297,16 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://brain-arts.net/">株式会社ブレインアーツ</a>
               </div>
             </div>
+            <div class="col-sm-6 col-md-4 sponsor-card">
+              <a target="_blank" rel="noopener noreferrer" href="https://tanocee.com/">
+                <picture class="sponsor-picture picture-extra-small">
+                  <img src="./img/sponsor/logo-tanocee.svg" alt="sponsor image">
+                </picture>
+              </a>
+              <div class="sponsor-link">
+                <a target="_blank" rel="noopener noreferrer" href="https://tanocee.com/">株式会社tanocee</a>
+              </div>
+            </div>
           </div>
         </div>
         <div class="section-sponsor section-venue">
