modify date format

--- a/_sponsor_events/cyberagent_android_boot_camp.html
+++ b/_sponsor_events/cyberagent_android_boot_camp.html
@@ -1,8 +1,8 @@
 ---
 event_name: Androidブートキャンプ
 author: サイバーエージェント
-event_date: 2024/06/28(金)
-entry_end_date: 2024/06/24(月)
+event_date: 2024-06-28
+entry_end_date: 2024-06-24
 target: 岩手県立大学の学生
 form_url: https://docs.google.com/forms/d/1vgplLMfTJcFNC3KueJ8S6NQEb6u_SzFDc-tTw--bnCM/viewform
 ---
