--- a/index.html
+++ b/index.html
@@ -301,13 +301,13 @@
               </div>
             </div>
             <div class="col-sm-6 col-md-4 sponsor-card">
-              <a target="_blank" rel="noopener noreferrer" href="https://tanocee.com/">
+              <a target="_blank" rel="noopener noreferrer" href="https://www.tanocee.co.jp/">
                 <picture class="sponsor-picture picture-extra-small">
                   <img src="./img/sponsor/logo-tanocee.svg" alt="sponsor image">
                 </picture>
               </a>
               <div class="sponsor-link">
-                <a target="_blank" rel="noopener noreferrer" href="https://tanocee.com/">株式会社tanocee</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.tanocee.co.jp/">株式会社tanocee</a>
               </div>
             </div>
           </div>
