後援の名称を一部変更

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                   </picture>
                 </a>
                 <div class="sponsor-link">
-                  <a target="_blank" rel="noopener noreferrer" href="https://www.city.takizawa.iwate.jp/">岩手県 滝沢市</a>
+                  <a target="_blank" rel="noopener noreferrer" href="https://www.city.takizawa.iwate.jp/">滝沢市</a>
                 </div>
               </div>
             </div>
