update profile description

--- a/_team_members/yuya_sato.html
+++ b/_team_members/yuya_sato.html
@@ -5,7 +5,7 @@ member_image: /img/y-sato.jpg
 member_x: https://twitter.com/yuyuya0203
 member_facebook: https://www.facebook.com/yuyuya0203/
 member_github: https://github.com/dao0203
-member_description: 2021年に岩手県立大学に入学し、現在は3年生。 FlutterとKotlinなどのモバイルファーストな技術に触れて活動中。 現在は東北TECH道場にてAndroidモバイルアプリ団体を運営している。 趣味は、筋トレ、カラオケ、食べること。 
+member_description: 2021年に岩手県立大学に入学し、現在は4年生。 FlutterとKotlinなどのモバイルファーストな技術に触れて学生エンジニア。 現在は東北TECH道場の運営、合同会社Gajerollで業務委託としてAndroidモバイルエンジニアをしている。 趣味は、筋トレ、カラオケ、キャンプ。 
 date: 2024-04-01
 ---
 
