タイムテーブルのセクションを追加

--- a/index.html
+++ b/index.html
@@ -355,7 +355,39 @@
     </section>
     <!-- section-sponsors-position -->
 
-    <section id="section-entry" class="section-wrapper">
+
+    <section id="section-timetable" class="section-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title">
+              <h1>タイムテーブル</h1>
+            </div>
+          </div>
+        </div>
+        <!-- /.row-->
+
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-title timetable-section-title">
+              <h2>Day1</h2>
+              <div>
+                <p>hogehoge</p>
+              </div>
+            </div>
+            <div class="section-title timetable-section-title">
+              <h2>Day2</h2>
+              <div>
+                <p>fugafuga</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- section-entry -->
+
+    <section id="section-entry" class="section-wrapper gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -415,7 +447,7 @@
     <!-- section-entry -->
 
     <section id="section-participant-feedback-position"
-      class="section-wrapper section-participant-feedback-position gray-bg">
+      class="section-wrapper section-participant-feedback-position">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -449,7 +481,7 @@
     </section>
     <!-- section-participant-feedback-position -->
 
-    <section id="section-faq-position" class="section-wrapper section-faq-position">
+    <section id="section-faq-position" class="section-wrapper section-faq-position gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -533,7 +565,7 @@
     </section>
     <!-- section-faq-position -->
 
-    <section id="section-locus" class="section-wrapper gray-bg">
+    <section id="section-locus" class="section-wrapper">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
