タイムテーブルのスタイルを変更

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
   </svg>
   <!-- Facebook button -->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v19.0&appId=242241782946256" nonce="SbhRCblv"></script>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v19.0&appId=242241782946256"
+    nonce="SbhRCblv"></script>
 
   <div id="main-wrapper">
     <!-- Page Preloader -->
@@ -83,7 +85,8 @@
     <div class="orig-jumbotron" id="background-particles">
       <div class="content content-one">
         <div class="typewriter wf-notosansjapanese">
-          <span class="catch-copy">この週末で、</span><br><span class="input-catch-copy"></span><span class="title-cursor">|</span>
+          <span class="catch-copy">この週末で、</span><br><span class="input-catch-copy"></span><span
+            class="title-cursor">|</span>
         </div>
       </div>
       <div class="content content-two">
@@ -91,7 +94,8 @@
         <nav class="event-share-nav">
           <ul class="nav">
             <li>
-              <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-hashtags="HackFromTakizawa">ツイート</a>
+              <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja"
+                data-hashtags="HackFromTakizawa">ツイート</a>
             </li>
             <li>
               <a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button"
@@ -101,7 +105,10 @@
               </a>
             </li>
             <li>
-              <div class="fb-share-button" data-href="https://takizawa-hackathon.com/" data-layout="" data-size=""><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftakizawa-hackathon.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">シェアする</a></div>
+              <div class="fb-share-button" data-href="https://takizawa-hackathon.com/" data-layout="" data-size=""><a
+                  target="_blank"
+                  href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Ftakizawa-hackathon.com%2F&amp;src=sdkpreparse"
+                  class="fb-xfbml-parse-ignore">シェアする</a></div>
             </li>
           </ul>
         </nav>
@@ -368,24 +375,112 @@
         <!-- /.row-->
 
         <div class="row">
-          <div class="col-md-12">
-            <div class="section-title timetable-section-title">
+          <div class="col-md-6">
+            <div class="section-title timetable-section-subtitle">
               <h2>Day1</h2>
-              <div>
-                <p>hogehoge</p>
-              </div>
             </div>
-            <div class="section-title timetable-section-title">
+            <div class="timetable-container">
+              <ul class="timetable-list">
+                <li>
+                  <dl>
+                    <dt>09:00</dt>
+                    <dd>開場・受付開始</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>09:10</dt>
+                    <dd>オープニング・スポンサー企業紹介</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>09:30</dt>
+                    <dd>チームキックオフ・アイスブレイク</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>10:00</dt>
+                    <dd>アイデアソン</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>12:00</dt>
+                    <dd>昼食</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>13:00</dt>
+                    <dd>開発開始</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>17:00</dt>
+                    <dd>中間発表</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>20:00</dt>
+                    <dd>閉場（会場クローズ）</dd>
+                  </dl>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="section-title timetable-section-subtitle">
               <h2>Day2</h2>
-              <div>
-                <p>fugafuga</p>
-              </div>
+            </div>
+            <div class="timetable-container">
+              <ul class="timetable-list">
+                <li>
+                  <dl>
+                    <dt>09:00</dt>
+                    <dd>開場・各自作業開始</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>12:00</dt>
+                    <dd>昼食</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>13:00</dt>
+                    <dd>発表順抽選</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>15:00</dt>
+                    <dd>プレゼンテーション</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>16:00</dt>
+                    <dd>結果発表・表彰・記念撮影</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>18:00</dt>
+                    <dd>アフターパーティー</dd>
+                  </dl>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- section-entry -->
+    <!-- section-timetable -->
 
     <section id="section-entry" class="section-wrapper gray-bg">
       <div class="container">
@@ -446,8 +541,7 @@
     </section>
     <!-- section-entry -->
 
-    <section id="section-participant-feedback-position"
-      class="section-wrapper section-participant-feedback-position">
+    <section id="section-participant-feedback-position" class="section-wrapper section-participant-feedback-position">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -556,7 +650,8 @@
               <p class="section-faq-answer">A. 和気あいあいとした雰囲気の中で、ものづくりを楽しめるイベントです！</p>
               <span>
                 「ハッカソンイベントに参加するのが初めて」という参加者も多く、初めてのハッカソンでも楽しめたという声をよくいただいています。<br />
-                過去の開催の様子は、<a href="https://www.flickr.com/photos/157754753@N02/albums/72177720312765208">こちら</a> からご覧ください！
+                過去の開催の様子は、<a href="https://www.flickr.com/photos/157754753@N02/albums/72177720312765208">こちら</a>
+                からご覧ください！
               </span>
             </li>
           </ol>
@@ -615,7 +710,7 @@
       </div>
     </section>
 
-  {% include footer.html %}
+    {% include footer.html %}
 
   </div>
   <!-- #main-wrapper -->
