スライドショーを追加

--- a/index.html
+++ b/index.html
@@ -482,7 +482,15 @@
     </section>
     <!-- section-timetable -->
 
-    <section id="section-entry" class="section-wrapper gray-bg">
+    <section id="section-slideshow" class="">
+      <div class="slideshow-container">
+        <img src="img/slideshow/slideshow_ver6.png" />
+        <img src="img/slideshow/slideshow_ver6.png" />
+      </div>
+    </section>
+    <!-- section-slideshow -->
+
+    <section id="section-entry" class="section-wrapper">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -541,7 +549,7 @@
     </section>
     <!-- section-entry -->
 
-    <section id="section-participant-feedback-position" class="section-wrapper section-participant-feedback-position">
+    <section id="section-participant-feedback-position" class="section-wrapper section-participant-feedback-position gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -575,7 +583,7 @@
     </section>
     <!-- section-participant-feedback-position -->
 
-    <section id="section-faq-position" class="section-wrapper section-faq-position gray-bg">
+    <section id="section-faq-position" class="section-wrapper section-faq-position">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -660,7 +668,7 @@
     </section>
     <!-- section-faq-position -->
 
-    <section id="section-locus" class="section-wrapper">
+    <section id="section-locus" class="section-wrapper gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
