--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <meta property="og:title" content="Takizawa Hackathon // 滝沢市のハッカソンコミュニティ" />
   <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://takizawa-hackathon.github.io/" />
-  <meta property="og:image" content="https://takizawa-hackathon.github.io/img/og_image.png" />
+  <meta property="og:url" content="https://takizawa-hackathon.com/" />
+  <meta property="og:image" content="https://takizawa-hackathon.com/img/og_image_ver6.png" />
   <meta property="og:site_name" content="Takizawa Hackathon" />
 
   <!-- favicon -->
