--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <meta property="og:url" content="https://takizawa-hackathon.com/" />
   <meta property="og:image" content="https://takizawa-hackathon.com/img/og_image_ver6.png" />
   <meta property="og:site_name" content="Takizawa Hackathon" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Takizawa Hackathon // 滝沢市のハッカソンコミュニティ" />
+  <meta name="twitter:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。" />
+  <meta name="twitter:image" content="https://takizawa-hackathon.com/img/og_image_ver6.png" />
 
   <!-- favicon -->
   <link href="/favicons/favicon.ico" rel=icon>
