--- a/_sponsor_events/brain-arts_ichinosekibeer.html
+++ b/_sponsor_events/brain-arts_ichinosekibeer.html
@@ -4,7 +4,7 @@ sponsored: ブレインアーツ
 event_date: 2024-08-23
 entry_end_date: 2024-08-25
 target: ALL
-form_url: https://www.facebook.com/ichinosekibeer
+form_url: https://www.ichitabi.jp/event/data.php?p=5
 event_image_url: https://www.ichitabi.jp/imagem/event/pho1_1712285718.jpg
 ---
 
