--- a/_sponsor_events/brain-arts_ichinosekibeer.html
+++ b/_sponsor_events/brain-arts_ichinosekibeer.html
@@ -3,7 +3,9 @@ event_name: 全国地ビールフェスティバルin一関
 sponsored: ブレインアーツ
 event_date: 2024-08-23
 entry_end_date: 2024-08-25
+data_show_until: 2024-08-25
 target: ALL
+action_button_label: 詳細を見る
 form_url: https://www.ichitabi.jp/event/data.php?p=5
 event_image_url: https://www.ichitabi.jp/imagem/event/pho1_1712285718.jpg
 ---
