トップページに「ArchTVで取り上げられました！」のバナーを追加

--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 
     {% include header.html %}
 
+    <div class="news-banner" id="news-banner">
+      <a href="https://youtu.be/K-vlhQgTJXg?si=KxvvYzq84oMzEJPZ" target="_blank">
+        <img src="./img/news-banner.png" alt="Arch TVで取り上げられました！">
+      </a>
+      <span class="close-btn" id="news-banner-close-btn">&times;</span>
+    </div>
+
     <div class="orig-jumbotron" id="background-particles">
       <div class="content content-one">
         <div class="typewriter wf-notosansjapanese">
