update privacy policy

--- a/privacy/index.html
+++ b/privacy/index.html
@@ -108,7 +108,7 @@
                 <p>滝沢ハッカソン運営委員会は、利用者よりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示しません。</p>
                 <ul>
                     <li>利用者の同意がある場合</li>
-                    <li>利用者に企業賞の副賞を贈呈するために、スポンサー企業に対して利用者の連絡先情報（お名前、メールアドレス、電話番号等）を提供する場合</li>
+                    <li>スポンサー企業に対して利用者の連絡先情報（お名前、メールアドレス、電話番号等）を提供する場合</li>
                     <li>利用者が希望されるサービスを行なうために、当団体が業務を委託する業者に対して開示する場合</li>
                     <li>法令に基づき開示することが必要である場合</li>
                 </ul>
@@ -118,6 +118,11 @@
                 <p>利用者がご本人の個人情報の照会・修正・削除などをご希望される場合には、ご本人であることを確認の上、速やかに対応させていただきます。</p>
                 <h3>プライバシーポリシーの変更</h3>
                 <p>本ポリシーの内容は，法令その他本ポリシーに別段の定めのある事項を除いて，利用者に通知することなく、変更することができるものとします。当団体が別途定める場合を除いて、変更後のプライバシーポリシーは本ウェブサイトに掲載したときから効力を生じるものとします。
+                </p>
+                <h3>制定日</h3>
+                <p>
+                    2024年1月6日 制定<br>
+                    2024年9月16日 改定<br>
                 </p>
                 <h3>お問い合せ</h3>
                 <p>滝沢ハッカソン運営委員会の個人情報の取扱に関するお問い合せは下記までご連絡ください。</p>
