--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="orig-jumbotron" id="background-particles">
       <div class="content content-one">
         <div class="typewriter wf-notosansjapanese">
-          <span class="catch-copy">この週末で、</span><br><span class="f-catch-copy"></span><span
+          <span class="catch-copy">この週末で、</span><br><span class="input-catch-copy"></span><span
             class="title-cursor">|</span>
         </div>
       </div>
