リード文を更新

--- a/index.html
+++ b/index.html
@@ -140,12 +140,22 @@
               <strong>Takizawa Hackathon</strong>は、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだすハッカソンコミュニティです。
             </p>
             <p class="lead">
-              Coming Soon!
+              <b>Ver.7のテーマは…</b><br>
+              現在、テーマを鋭意検討中です！<br>
+              皆さまに楽しんでいただける、挑戦しがいのあるワクワクするテーマを準備していますので、今しばらくお待ちください。
+            </p>
+            <p class="lead">
+              <b>参加申し込み受付中！</b><br>
+              申し込み受付はすでにスタートしています！<br>
+              お申し込みいただいた方には、テーマが決定次第、いち早くご連絡いたしますので、ぜひお早めにご応募ください。
+            </p>
+            <p class="lead">
+              最新情報は本ページおよび<a target="_blank" rel="noopener noreferrer" href="https://x.com/takizawahack">公式X（旧Twitter）アカウント</a>にて随時更新いたしますので、ぜひチェックしてください！
             </p>
           </div>
           <div class="col-md-4 about-event-info">
             <address>
-              <strong>Takizawa Hackathon Ver.6</strong><br>
+              <strong>Takizawa Hackathon Ver.7</strong><br>
               日時：2024/12/14-15<br>
               場所：岩手県立大学近辺予定を予定しています(決まり次第更新予定です)
               <div class="google-map-button">
