紹介文を修正

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p class="lead">
               <b>Ver.7のテーマは、「自治体が抱える課題に挑戦せよ！ ~ 地方の農業を支える新しいつながりを創る ~」です！</b><br>
               滝沢市は、豊かな自然に恵まれ、稲や野菜をはじめ、滝沢りんごやスイカ、サツマイモなどの特産品を誇る農業地帯。しかし、最近では少子高齢化や人手不足により、農産物が生産者から消費者へスムーズに届かないという課題にも直面しています。<br>
-              今回のハッカソンでは、滝沢市の農業に精通した市の職員の方から実際の現場が直面しているリアルな課題を共有していただき、それらの課題解決に取り組むような内容となっています。
+              今回のハッカソンでは、滝沢市の農業に精通した市の職員の方から実際の現場が直面しているリアルな課題を共有していただき、それらの課題解決に取り組む内容となっています！
             </p>
             <p class="lead">
               滝沢市の農業の未来を一緒に考え、テクノロジーを用いて実現するワクワクする二日間を過ごしましょう！
