スポンサーの種別が確定するまで暫定で区別せずに表示する

--- a/index.html
+++ b/index.html
@@ -272,8 +272,7 @@
     </section>
     <!-- section-team-position -->
 
-    <!-- TODO: スポンサーについて決まり次第対応 -->
-    <!-- <section id="section-sponsors-position" class="section-wrapper client-logo gray-bg">
+    <section id="section-sponsors-position" class="section-wrapper client-logo gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -283,16 +282,6 @@
           </div>
         </div>
         <div class="section-sponsor">
-            <div class="col-sm-6 col-md-4 sponsor-card">
-              <a target="_blank" rel="noopener noreferrer" href="https://www.cyberagent.co.jp/">
-                <picture class="sponsor-picture picture-small">
-                  <img src="./img/sponsor/logo-cyberagent.png" alt="sponsor image">
-                </picture>
-              </a>
-              <div class="sponsor-link">
-                <a target="_blank" rel="noopener noreferrer" href="https://www.cyberagent.co.jp/">株式会社サイバーエージェント</a>
-              </div>
-            </div>
             <div class="col-sm-6 col-md-4 sponsor-card">
               <a target="_blank" rel="noopener noreferrer" href="https://pascalia.co.jp/">
                 <picture class="sponsor-picture picture-medium">
