タイムテーブルを更新

--- a/index.html
+++ b/index.html
@@ -370,19 +370,25 @@
                 </li>
                 <li>
                   <dl>
-                    <dt>09:30</dt>
-                    <dd>チームキックオフ・アイスブレイク</dd>
+                    <dt>09:40</dt>
+                    <dd>滝沢市農林課より「農業の現状と課題のお話」（テーマの説明）<br class="timetable-list-dd-br">滝沢市 若者活躍推進室のご紹介</dd>
                   </dl>
                 </li>
                 <li>
                   <dl>
                     <dt>10:00</dt>
+                    <dd>チームキックオフ・アイスブレイク</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>10:20</dt>
                     <dd>アイデアソン</dd>
                   </dl>
                 </li>
                 <li>
                   <dl>
-                    <dt>12:00</dt>
+                    <dt>12:10</dt>
                     <dd>昼食</dd>
                   </dl>
                 </li>
@@ -396,6 +402,12 @@
                   <dl>
                     <dt>17:00</dt>
                     <dd>中間発表</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>17:30</dt>
+                    <dd>市長の講評・市長と語る会<span class="timetable-list-dd-notes">（1時間程度）</span></dd>
                   </dl>
                 </li>
                 <li>
