OGP画像を更新（開催場所）

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <meta property="og:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://takizawa-hackathon.com/" />
-  <meta property="og:image" content="https://takizawa-hackathon.com/img/og_image_ver7.png" />
+  <meta property="og:image" content="https://takizawa-hackathon.com/img/og_image_ver7_20241120.png" />
   <meta property="og:site_name" content="Takizawa Hackathon" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Takizawa Hackathon // 滝沢市のハッカソンコミュニティ" />
   <meta name="twitter:description" content="Takizawa Hackathonは岩手の学生が主役のハッカソンコミュニティです。" />
-  <meta name="twitter:image" content="https://takizawa-hackathon.com/img/og_image_ver7.png" />
+  <meta name="twitter:image" content="https://takizawa-hackathon.com/img/og_image_ver7_20241120.png" />
 
   <!-- favicon -->
   <link href="/favicons/favicon.ico" rel=icon>
