タイムテーブルの内容を一部修正

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <li>
                   <dl>
                     <dt>17:30</dt>
-                    <dd>市長の講評・市長と語る会<span class="timetable-list-dd-notes">（1時間程度）</span></dd>
+                    <dd>市長の講評・市長と語る会<span class="timetable-list-dd-notes">（30分程度）</span></dd>
                   </dl>
                 </li>
                 <li>
