--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -63,10 +63,9 @@ custom_css: "/css/sponsorship.css"
     <p>過去の開催の様子は、<a href="https://www.flickr.com/photos/157754753@N02/albums/72177720312765208">こちら</a> からご覧ください。</p>
     <h3>次回イベントの概要</h3>
     <ul>
-      <li>開催日時: 2024年12月14日(土)〜15日（日）</li>
+      <li>開催日時:<s> 2024年12月14日(土)〜15日（日）</s> <font color="red">現在開催日時を調整中です。2025年3月頃を予定しております。</font></li>
       <li>開催場所: 滝沢市周辺</li>
-      <!-- TODO: Ver.7対応 -->
-      <li>テーマ：Coming Soon!</li>
+      <li>「自治体が抱える課題に挑戦せよ！ ~ 地方の農業を支える新しいつながりを創る ~」</li>
     </ul>
     <h3>これまでの開催実績</h3>
     <p>2016年から始まり、2024年現在までに計6回のハッカソンイベントを開催しています。</p>
