開催場所のGoogleマップリンクを更新

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               日時：<s>2024/12/14-15</s> <font color="red">現在開催日時を調整中です。2025年3月頃を予定しております。</font><br>
               場所：滝沢市役所
               <div class="google-map-button">
-                <a class="google-map-link" href="https://maps.app.goo.gl/nT5b21PXTYLvtG6BA"><i class="fa fa-map-marker"
+                <a class="google-map-link" href="https://maps.app.goo.gl/jPod1wPWeQu8bBJq8"><i class="fa fa-map-marker"
                     aria-hidden="true"></i>Google Map</a>
               </div>
               <br>
