スポンサーのレイアウトを調整

--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
           </div>
         </div>
         <div class="section-sponsor">
-            <div class="col-sm-6 col-md-4 sponsor-card">
+            <div class="col-sm-6 col-md-6 sponsor-card">
               <a target="_blank" rel="noopener noreferrer" href="https://brain-arts.net/">
-                <picture class="sponsor-picture picture-extra-small">
+                <picture class="sponsor-picture picture-small">
                   <img src="./img/sponsor/logo-brain-arts.png" alt="sponsor image">
                 </picture>
               </a>
@@ -292,7 +292,7 @@
                 <a target="_blank" rel="noopener noreferrer" href="https://brain-arts.net/">株式会社ブレインアーツ</a>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 sponsor-card">
+            <div class="col-sm-6 col-md-6 sponsor-card">
               <a target="_blank" rel="noopener noreferrer" href="https://www.tanocee.co.jp/">
                 <picture class="sponsor-picture picture-extra-small">
                   <img src="./img/sponsor/logo-tanocee.svg" alt="sponsor image">
