--- a/index.html
+++ b/index.html
@@ -355,36 +355,48 @@
                 <li>
                   <dl>
                     <dt>09:10</dt>
-                    <dd>オープニング・スポンサー企業紹介</dd>
+                    <dd>オープニング</dd>
                   </dl>
                 </li>
                 <li>
                   <dl>
-                    <dt>09:40</dt>
+                    <dt>09:20</dt>
                     <dd>滝沢市農林課より「農業の現状と課題のお話」（テーマの説明）<br class="timetable-list-dd-br">滝沢市 若者活躍推進室のご紹介</dd>
                   </dl>
                 </li>
                 <li>
                   <dl>
-                    <dt>10:00</dt>
+                    <dt>09:40</dt>
                     <dd>チームキックオフ・アイスブレイク</dd>
                   </dl>
                 </li>
                 <li>
                   <dl>
-                    <dt>10:20</dt>
+                    <dt>10:00</dt>
                     <dd>アイデアソン</dd>
                   </dl>
                 </li>
                 <li>
                   <dl>
-                    <dt>12:10</dt>
+                    <dt>11:30</dt>
+                    <dd>市長と語る会</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>12:00</dt>
                     <dd>昼食</dd>
                   </dl>
                 </li>
                 <li>
                   <dl>
                     <dt>13:00</dt>
+                    <dd>スポンサー企業紹介</dd>
+                  </dl>
+                </li>
+                <li>
+                  <dl>
+                    <dt>13:20</dt>
                     <dd>開発開始</dd>
                   </dl>
                 </li>
@@ -392,12 +404,6 @@
                   <dl>
                     <dt>17:00</dt>
                     <dd>中間発表</dd>
-                  </dl>
-                </li>
-                <li>
-                  <dl>
-                    <dt>17:30</dt>
-                    <dd>市長の講評・市長と語る会<span class="timetable-list-dd-notes">（30分程度）</span></dd>
                   </dl>
                 </li>
                 <li>
