--- a/index.html
+++ b/index.html
@@ -140,19 +140,19 @@
               <strong>Takizawa Hackathon</strong>は、岩手県の学生が集い、仲間と楽しみながらワクワクするような新しいものを生みだすハッカソンコミュニティです。
             </p>
             <p class="lead">
-              <b>Ver.7のテーマは、「自治体が抱える課題に挑戦せよ！ ~ 地方の農業を支える新しいつながりを創る ~」です！</b><br>
-              滝沢市は、豊かな自然に恵まれ、稲や野菜をはじめ、滝沢りんごやスイカ、サツマイモなどの特産品を誇る農業地帯。しかし、最近では少子高齢化や人手不足により、農産物が生産者から消費者へスムーズに届かないという課題にも直面しています。<br>
-              今回のハッカソンでは、滝沢市の農業に精通した市の職員の方から実際の現場が直面しているリアルな課題を共有していただき、それらの課題解決に取り組む内容となっています！
+              <b>Ver.8のテーマは、〇〇です！</b><br>
+              TODO(ver8): テーマを記載する
             </p>
             <p class="lead">
-              滝沢市の農業の未来を一緒に考え、テクノロジーを用いて実現するワクワクする二日間を過ごしましょう！
+              TODO(ver8): のテーマを記載する
             </p>
           </div>
           <div class="col-md-4 about-event-info">
             <address>
-              <strong>Takizawa Hackathon Ver.7</strong><br>
-              日時：2025/3/15-16<br>
-              場所：滝沢市役所
+              <strong>Takizawa Hackathon Ver.8</strong><br>
+              日時：2025/9/27-28<br>
+              場所：近日公開予定！
+              <!-- TODO(ver8) -->
               <div class="google-map-button">
                 <a class="google-map-link" href="https://maps.app.goo.gl/jPod1wPWeQu8bBJq8"><i class="fa fa-map-marker"
                     aria-hidden="true"></i>Google Map</a>
@@ -162,7 +162,7 @@
               参加費：無料<br>
               運営元：滝沢ハッカソン運営委員会
               <br><br>
-              <strong>エントリー締め切り：<br><del>2025年2月21日(金)</del><br> <font color="red">2025年3月7日(金) 23:59 UTC+09</font></strong><br>
+              <strong>エントリー締め切り：<br>2025年8月29日(金)<br></strong><br>
             </address>
           </div>
         </div>
@@ -272,7 +272,9 @@
     </section>
     <!-- section-team-position -->
 
-    <section id="section-sponsors-position" class="section-wrapper client-logo gray-bg">
+    <!-- TODO(ver8): Sponsor -->
+
+    <!-- <section id="section-sponsors-position" class="section-wrapper client-logo gray-bg">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -324,7 +326,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- section-sponsors-position -->
 
 
@@ -358,12 +360,13 @@
                     <dd>オープニング</dd>
                   </dl>
                 </li>
-                <li>
+                <!-- TODO(ver8) -->
+                <!-- <li>
                   <dl>
                     <dt>09:20</dt>
                     <dd>滝沢市農林課より「農業の現状と課題のお話」（テーマの説明）<br class="timetable-list-dd-br">滝沢市 若者活躍推進室のご紹介</dd>
                   </dl>
-                </li>
+                </li> -->
                 <li>
                   <dl>
                     <dt>09:40</dt>
@@ -376,24 +379,26 @@
                     <dd>アイデアソン</dd>
                   </dl>
                 </li>
-                <li>
+                <!-- TODO(ver8) -->
+                <!-- <li>
                   <dl>
                     <dt>11:30</dt>
                     <dd>市長と語る会</dd>
                   </dl>
-                </li>
+                </li> -->
                 <li>
                   <dl>
                     <dt>12:00</dt>
                     <dd>昼食</dd>
                   </dl>
                 </li>
-                <li>
+                <!-- TODO(ver8) -->
+                <!-- <li>
                   <dl>
                     <dt>13:00</dt>
                     <dd>スポンサー企業紹介</dd>
                   </dl>
-                </li>
+                </li> -->
                 <li>
                   <dl>
                     <dt>13:20</dt>
