--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -63,9 +63,9 @@ custom_css: "/css/sponsorship.css"
     <p>過去の開催の様子は、<a href="https://www.flickr.com/photos/157754753@N02/albums/72177720312765208">こちら</a> からご覧ください。</p>
     <h3>次回イベントの概要</h3>
     <ul>
-      <li>開催日時: 2025年3月15日(土)〜16日（日）</li>
+      <li>開催日時: 2025年9月27日(土)〜28日（日）</li>
       <li>開催場所: 滝沢市周辺</li>
-      <li>「自治体が抱える課題に挑戦せよ！ ~ 地方の農業を支える新しいつながりを創る ~」</li>
+      <li>TODO(ver8)</li>
     </ul>
     <h3>これまでの開催実績</h3>
     <p>2016年から始まり、2024年現在までに計6回のハッカソンイベントを開催しています。</p>
@@ -161,6 +161,15 @@ custom_css: "/css/sponsorship.css"
           </li>
         </ul>
       </li>
+      <li>
+        <b>2025/3/15-16 ver.7</b>
+        <ul>
+          <li>テーマ: 自治体が抱える課題に挑戦せよ！ ~ 地方の農業を支える新しいつながりを創る ~</li>
+          <li>参加人数: 20名程度</li>
+          <li>開催場所: 滝沢市周辺</li>
+          <li>協賛(順不同): 株式会社ブレインアーツ様, 株式会社tanocee様</li>
+          <li>後援: 滝沢市</li>
+        </ul>
     </ul>
 
     <h3>お申し込み方法</h3>
