Update registration form URL for Takizawa Hackathon Ver.8 in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ event_day: 2025/9/27-28
 event_place: 近日公開予定！
 event_place_url:
 form_deadline: 2025年8月29日(金)
-form_url: https://forms.gle/RsSjwDmgCS8H2MKN6
+form_url: https://forms.gle/SSq3GH4rhAKtUj3r8
 ---
 
 <!DOCTYPE html>
