Update event location and theme for Takizawa Hackathon Ver.8; change event place to "滝沢市近郊" and revise theme description to emphasize local agricultural challenges.

--- a/_timeline_events/takizawa_hackathon_ver7.html
+++ b/_timeline_events/takizawa_hackathon_ver7.html
@@ -2,7 +2,7 @@
 date: 2025-3-15
 event_title: Takizawa Hackathon ver.7を開催
 event_desctiption: 第7回目となるハッカソンイベントを開催しました。
-event_theme: 地方の農業を支える新しいつながりを創る！
+event_theme: 自治体が抱える課題に挑戦せよ！ ~ 地方の農業を支える新しいつながりを創る ~
 event_place: 滝沢市役所
 event_attendance: 12名
 event_page_url: https://takizawahackathon.connpass.com/event/336630/
