--- a/sponsorship/index.html
+++ b/sponsorship/index.html
@@ -64,11 +64,11 @@ custom_css: "/css/sponsorship.css"
     <h3>次回イベントの概要</h3>
     <ul>
       <li>開催日時: 2025年9月27日(土)〜28日（日）</li>
-      <li>開催場所: 滝沢市周辺</li>
-      <li>TODO(ver8)</li>
+      <li>開催場所: 滝沢市近郊</li>
+      <li>地域と人がゆるやかにつながる仕組みをつくる</li>
     </ul>
     <h3>これまでの開催実績</h3>
-    <p>2016年から始まり、2024年現在までに計6回のハッカソンイベントを開催しています。</p>
+    <p>2016年から始まり、2025年現在までに計7回のハッカソンイベントを開催しています。</p>
     <ul>
       <li>
         <b>2016/11/19-20 ver.1</b>
@@ -165,8 +165,8 @@ custom_css: "/css/sponsorship.css"
         <b>2025/3/15-16 ver.7</b>
         <ul>
           <li>テーマ: 自治体が抱える課題に挑戦せよ！ ~ 地方の農業を支える新しいつながりを創る ~</li>
-          <li>参加人数: 20名程度</li>
-          <li>開催場所: 滝沢市周辺</li>
+          <li>参加人数: 12名</li>
+          <li>開催場所: 滝沢市役所</li>
           <li>協賛(順不同): 株式会社ブレインアーツ様, 株式会社tanocee様</li>
           <li>後援: 滝沢市</li>
         </ul>
