--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 enabled_sponsor: false
 event_day: 2025/9/27-28
-event_place: 岩手県立大学周辺(近日公開予定)
+event_place: 滝沢市近郊
 event_place_url:
 form_deadline: 2025年8月29日(金)
 form_url: https://forms.gle/SSq3GH4rhAKtUj3r8
